[workspace]
members = [
    "ulangi",
    "ulangc",
    "ulangvm",
]

[workspace.package]
version = "0.0.1"
edition = "2021"

[package]
name = "ulang"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
